# pyLFR

./: .deepsource.toml  .gitignore  .gitmodules  AlgorithmProcess.csv  CODE_OF_CONDUCT.md  InterResults.csv  Pipfile  README.md  cmdline.py  generator-old.py  lfrCompiler.py  lfrX.g4  mappingCompiler.py  nodes_todo.md  notes.md  parameters.py  pyeda_test.py  pylfr.code-workspace  pyproject.toml  random_graph_gen.py  reggie.g4  requirements.txt  rule_validation.ipynb  scripts.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json
antlr/: lfrXLexer.py  lfrXLexer.tokens  lfrXListener.py  lfrXParser.py
compiler/: fluid.py  fluidinteraction.py  fluidinteractiongraph.py  lfrerror.py  module.py  moduleio.py  signal.py  storage.py
compiler/language/: concatenation.py  fluidexpression.py  logicexpressions.py  utils.py  vector.py  vectorrange.py
lfr/: api.py  cmdline.py  distBlockListener.py  lfrCompiler.py  lfrbaseListener.py  mappingCompiler.py  moduleinstanceListener.py  notes.md  parameters.py  postProcessListener.py  postprocessingListener.py  preprocessor.py  utils.py
lfr/antlr/: lfrX.interp  lfrXLexer.interp  lfrXListener.py  lfrXParser.py
lfr/antlrgen/: lfrX.interp  lfrX.tokens  lfrXLexer.interp  lfrXLexer.py  lfrXLexer.tokens  lfrXListener.py  lfrXParser.py  lfrXVisitor.py
lfr/compiler/: fluid.py  fluidinteractiongraph.py  fluidoperation.py  lfrerror.py  module.py  moduleio.py  signal.py  storage.py
lfr/fig/: annotation.py  autocomplete.py  fignode.py  fluidinteractiongraph.py  interaction.py  simplification.py
lfr/graphmatch/: README.md  figmappingmatcher.py  interface.py  matchpattern.py  matchpatterngenerator.py  nodefilter.py
lfr/netlistgenerator/: __init__.py  connectingoption.py  connection_primitive.py  constructiongraph-old.py  constructiongraph.py  dafdadapter.py  (+19 more)
mint/: mintcomponent.py  mintconnection.py  mintdevice.py  mintparams.py  minttarget.py
netlistgenerator/: dafd.py  dafdadapter.py  devicegenerator.py  explicitmapping.py  fluidicmapping.py  mappinglibrary.py  netlistsizor.py  technologymapper.py
old-stuff/: constructiongraph-old.py  constructionnode-old.py  dafdadapter-old.py  dummy-old.py  generator-old.py  marsstrategy-old.py
scripts/: all.sh  dropx.sh  generategraphs.sh  runexamples.sh
sizing/: dafd.py  netlistsizor.py
tests/: conftest.py
wheels/: pygraphviz-1.6-cp38-cp38-linux_x86_64.whl  pygraphviz-1.6-cp38-cp38-macosx_10_15_x86_64.whl
(+131 files in other folders)
