[tool.poetry]
name = "lfr"
version = "0.1.4"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3-Clause"
packages = [
    { include = "lfr" },
]
include = [
    "library/*",
    "library/default-netlists/*"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
networkx = "^2.5"
argparse = "^1.4.0"
antlr4-python3-runtime = "^4.8"
pygraphviz = "^1.6"
dafd = "latest"
numpy = "^1.19.4"
tabulate = "^0.8.7"
art = "^5.2"
jsonschema = "^3.2.0"
pyeda = "^0.28.0"
parchmint = "0.3.2"
pymint = "^0.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^20.8b1"
flake8 = "^3.8.3"
rope = "^0.18.0"

[tool.poetry.scripts]
lfr-compile = "lfr.cmdline:main"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

